--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 theme: jekyll-theme-cayman
-title: "CS294-224/CS194-224 Entrepreneurship In Web3"
-description: Fall 2022
+title: "CS294-238/CS194-238 Zero Knowledge Proofs"
+description: Spring 2023
 show_downloads: false
 github:
   is_project_page: false
